update index file

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             </div>
             <div class="front-view">
-                <video loop autoplay src="stories/front video.mp4"></video>
+                <video controls src="stories/front video.mp4"></video>
             </div>
             <div class="story-card">
                 <div class="progress"></div>
